@@ -2,6 +2,8 @@ Changes in unreleased version:
 
 * Issue 36: XMLExporter generating invalid XML, when special characters are present
   in a TermVector field (Craig.Stires)
+* Issue 19: Custom directory implementation must be inherited from
+  FSDirectory (mitja.lenic)
 
 
 ---------------------------------------------------------------------------
